[package]
name = "microscan"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
cortex-m-rtic = "1.1.4"
embedded-hal = "1.0.0"
heapless = "0.8.0"
microbit = "0.15.1"
panic-rtt-target = "0.1.3"
rtt-target = "0.5.0"
rubble = { path = "../rubble/rubble" }
rubble-nrf5x = { path = "../rubble/rubble-nrf5x", features = ["51"] }

[profile.release]
debug = 2
#lto = "off"
opt-level = "z"

[profile.dev]
debug = 2
opt-level = 1
lto = "off"

